# autoinvent-schema

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.rst  MANIFEST.in  README.rst  model.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: tests.yml
docs/: changes.rst  conf.py  index.rst  license.rst  schema.rst
requirements/: dev.in  dev.txt  docs.txt  tests.txt  typing.txt
src/autoinvent_schema/: schema.py
src/conveyor_schema/: schema.py
tests/: test_defaults.py  test_getters.py  test_model_manager.py
