[metadata]
name = conveyor-schema
version = 0.1.0.dev0
url = https://py-conveyor-schema.autoinvent.dev/
project_urls =
    Documentation = https://py-conveyor-schema.autoinvent.dev/
    Changes = https://py-conveyor-schema.autoinvent.dev/changes/
    Source Code = https://github.com/autoinvent/py-conveyor-schema/
    Issue Tracker = https://github.com/autoinvent/py-conveyor-schema/issues/
author = David Lord
author_email = davidism@gmail.com
license = BlueOak-1.0.0
license_files = LICENSE.rst
description = Data model metadata schema for Conveyor and Magql.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
package_dir = = src
packages = find:
include_package_data = true
python_requires = >= 3.9

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    conveyor_schema
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80

[mypy]
files = src/conveyor_schema
python_version = 3.9
show_error_codes = True
allow_redefinition = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True

[mypy-inflect]
ignore_missing_imports = True
